--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.509.0",
     "next": "^15.4.4",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
