--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "next": "^15.4.4",
     "ngrok": "^5.0.0-beta.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
