--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,19 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.16.0",
+    "@types/compression": "^1.8.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.70.1",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^2.3.3",
-    "next-auth": "^4.24.11"
+    "next-auth": "^4.24.11",
+    "rate-limiter-flexible": "^9.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
